--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,29 +17,23 @@ jobs:
     # OS of runner
     runs-on: ubuntu-latest
     steps:
-      # checkout repo contents to runner
-      - 
-        name: Checkout repo to runner
+      - name: Checkout repo to runner
         uses: actions/checkout@v2
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
-      - 
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      # v2 allows use of buildx, requires separate use of docker-login action
-      #    total list of updates between v1 & v2: https://github.com/docker/build-push-action/blob/master/UPGRADE.md
-      - 
-        name: Build and push
+          
+      - name: Build and push
         # ID is used as a reference, from other jobs or steps
         #    using step ids: https://docs.github.com/en/actions/learn-github-actions/contexts#steps-context
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_HUB_REPO }}:latest
