--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,8 @@ name: Docker-Login-Build-Push
 on:
   push:
     branches: [main]
+    tags: 
+      - '*'
 
 env:
   DOCKER_HUB_REPO: project4
@@ -18,6 +20,12 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: wsudwoolard/project4
         
       - name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -31,4 +39,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_HUB_REPO }}:latest
+          tags: ${{ steps.meta.outputs.tags }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
